# allGoodPy

./: .gitignore  pyproject.toml
src/allgoodpy/: __main__.py  config.py
src/allgoodpy/bot/: handlers.py  main.py  middleware.py  states.py
src/allgoodpy/recognition/: __init__.py  pipeline.py
src/allgoodpy/sheets/: __init__.py  writer.py
